页脚组件化优化
## 页脚组件化优化完成

### ✅ 已完成的工作

#### 1. 创建页脚组件
- 创建了 [`footer.html`](main/components/footer.html) 组件文件
- 提取了统一的页脚HTML结构，便于集中管理

#### 2. 开发页脚加载器
- 创建了 [`footer-loader.js`](main/js/footer-loader.js) 动态加载组件
- 支持智能路径计算（自动识别教程页面路径）
- 包含加载状态和错误处理机制

#### 3. 更新主要页面
- 修改了 [`index.html`](index.html:95) 使用动态页脚
- 修改了 [`download.html`](download.html:48) 使用动态页脚
- 修改了 [`模板/教程模板.html`](模板/教程模板.html:68) 使用动态页脚

#### 4. 功能特性
- **路径智能计算**: 自动识别教程目录并使用正确的相对路径
- **错误处理**: 提供友好的加载失败提示
- **统一管理**: 所有页脚内容集中在一个文件中管理
- **向后兼容**: 保持原有样式和功能不变

### 🎯 使用优势

1. **集中管理**: 只需修改 [`footer.html`](main/components/footer.html) 即可更新所有页面的页脚
2. **维护便捷**: 添加链接、修改版权信息等操作只需在一个文件中进行
3. **一致性**: 确保所有页面页脚内容完全一致
4. **扩展性**: 支持未来添加更多页脚内容（如社交媒体链接、备案信息等）

### 📊 文件结构更新

```
main/
├── components/
│   ├── navbar-root.html
│   ├── navbar.html
│   └── footer.html          ← 新增页脚组件
└── js/
    ├── navbar-loader.js
    ├── footer-loader.js     ← 新增页脚加载器
    └── ...
```

现在您只需要修改 [`footer.html`](main/components/footer.html) 文件即可更新所有页面的页脚内容，实现了真正的"一次修改，处处生效"。

--- a/tutorial/phone/Lineage-GSI.html
+++ b/tutorial/phone/Lineage-GSI.html
@@ -21,10 +21,10 @@
         <div class="content-section">
             <h1>Lineage GSI 通用系统镜像选择教程</h1>
         <p>GSI（Generic System Image）即通用系统镜像，它是一种标准化的安卓系统映像，可以安装在任何支持Project Treble的设备上，而无需考虑品牌和型号。这使得它成为获取Root权限或体验原生安卓的常用工具。</p>
-        <p>社区中最受欢迎的GSI之一是基于LineageOS的版本，您可以在这里找到：<a href="https://sourceforge.net/projects/andyyan-gsi/files/" target="_blank">Andy Yan's GSI Builds</a></p>
+        <p>社区中最受欢迎的GSI之一是基于LineageOS的版本，您可以在这里找到：<a href="https://sourceforge.net/projects/andyyan-gsi/files/" target="_blank" rel="noopener noreferrer">Andy Yan's GSI Builds</a></p>
       
         <div class="note">
-            <p><strong>如何选择？</strong> 正确选择GSI需要匹配您设备的<strong>安卓版本</strong>、<strong>系统架构</strong>和<strong>CPU架构</strong>。您可以使用 <a href="https://linxize.lanzout.com/iMwHL34zoqgj" target="_blank">Device Info HW</a> 这类应用来查看这些信息。</p>
+            <p><strong>如何选择？</strong> 正确选择GSI需要匹配您设备的<strong>安卓版本</strong>、<strong>系统架构</strong>和<strong>CPU架构</strong>。您可以使用 <a href="https://linxize.lanzout.com/iMwHL34zoqgj" target="_blank" rel="noopener noreferrer">Device Info HW</a> 这类应用来查看这些信息。</p>
         </div>
 
         <h2>LineageOS 与 Android 版本对应表</h2>
@@ -133,38 +133,38 @@
 
         <h3>接近原生、稳定为主</h3>
         <ul>
-            <li><a href="https://lineageos.org/" target="_blank">LineageOS</a> - 下载: <a href="https://download.lineageos.org/" target="_blank">https://download.lineageos.org/</a></li>
-            <li><a href="https://arrowos.net/" target="_blank">ArrowOS</a> - 下载: <a href="https://download.arrowos.net/" target="_blank">https://download.arrowos.net/</a></li>
-            <li><a href="https://pixel-experience.org/" target="_blank">Pixel Experience</a> - 下载: <a href="https://download.pixelexperience.org/" target="_blank">https://download.pixelexperience.org/</a></li>
-            <li><a href="https://pixelos.net/" target="_blank">PixelOS</a> - 下载: <a href="https://download.pixelos.net/" target="_blank">https://download.pixelos.net/</a></li>
-            <li><a href="https://paranoidandroid.co/" target="_blank">Paranoid Android</a></li>
+            <li><a href="https://lineageos.org/" target="_blank" rel="noopener noreferrer">LineageOS</a> - 下载: <a href="https://download.lineageos.org/" target="_blank" rel="noopener noreferrer">https://download.lineageos.org/</a></li>
+            <li><a href="https://arrowos.net/" target="_blank" rel="noopener noreferrer">ArrowOS</a> - 下载: <a href="https://download.arrowos.net/" target="_blank" rel="noopener noreferrer">https://download.arrowos.net/</a></li>
+            <li><a href="https://pixel-experience.org/" target="_blank" rel="noopener noreferrer">Pixel Experience</a> - 下载: <a href="https://download.pixelexperience.org/" target="_blank" rel="noopener noreferrer">https://download.pixelexperience.org/</a></li>
+            <li><a href="https://pixelos.net/" target="_blank" rel="noopener noreferrer">PixelOS</a> - 下载: <a href="https://download.pixelos.net/" target="_blank" rel="noopener noreferrer">https://download.pixelos.net/</a></li>
+            <li><a href="https://paranoidandroid.co/" target="_blank" rel="noopener noreferrer">Paranoid Android</a></li>
         </ul>
 
         <h3>功能丰富、可玩性高</h3>
         <ul>
-            <li><a href="https://crdroid.net/" target="_blank">crDroid</a></li>
-            <li><a href="https://evolution-x.org/" target="_blank">Evolution X</a> - 下载: <a href="https://download.evolution-x.org/" target="_blank">https://download.evolution-x.org/</a></li>
-            <li><a href="https://havoc-os.com/" target="_blank">Havoc-OS</a></li>
-            <li><a href="https://projectelixiros.com/" target="_blank">Project Elixir</a></li>
-            <li><a href="https://derpfest.org/" target="_blank">DerpFest</a></li>
-            <li><a href="https://blissroms.org/" target="_blank">Bliss ROM</a></li>
-            <li><a href="https://www.aospextended.com/" target="_blank">AOSP Extended (AEX)</a></li>
-            <li><a href="https://droidontime.com/" target="_blank">DotOS (DroidOnTime)</a></li>
-            <li><a href="https://carbonrom.org/" target="_blank">CarbonROM</a></li>
-            <li><a href="https://omnirom.org/" target="_blank">OmniROM</a></li>
-            <li><a href="https://resurrectionremix.com/" target="_blank">Resurrection Remix</a>（偏旧，部分机型仍更新）</li>
+            <li><a href="https://crdroid.net/" target="_blank" rel="noopener noreferrer">crDroid</a></li>
+            <li><a href="https://evolution-x.org/" target="_blank" rel="noopener noreferrer">Evolution X</a> - 下载: <a href="https://download.evolution-x.org/" target="_blank" rel="noopener noreferrer">https://download.evolution-x.org/</a></li>
+            <li><a href="https://havoc-os.com/" target="_blank" rel="noopener noreferrer">Havoc-OS</a></li>
+            <li><a href="https://projectelixiros.com/" target="_blank" rel="noopener noreferrer">Project Elixir</a></li>
+            <li><a href="https://derpfest.org/" target="_blank" rel="noopener noreferrer">DerpFest</a></li>
+            <li><a href="https://blissroms.org/" target="_blank" rel="noopener noreferrer">Bliss ROM</a></li>
+            <li><a href="https://www.aospextended.com/" target="_blank" rel="noopener noreferrer">AOSP Extended (AEX)</a></li>
+            <li><a href="https://droidontime.com/" target="_blank" rel="noopener noreferrer">DotOS (DroidOnTime)</a></li>
+            <li><a href="https://carbonrom.org/" target="_blank" rel="noopener noreferrer">CarbonROM</a></li>
+            <li><a href="https://omnirom.org/" target="_blank" rel="noopener noreferrer">OmniROM</a></li>
+            <li><a href="https://resurrectionremix.com/" target="_blank" rel="noopener noreferrer">Resurrection Remix</a>（偏旧，部分机型仍更新）</li>
         </ul>
 
         <h3>隐私/安全取向（机型相对少）</h3>
         <ul>
-            <li><a href="https://grapheneos.org/" target="_blank">GrapheneOS</a>（Pixel 系列）</li>
-            <li><a href="https://calyxos.org/" target="_blank">CalyxOS</a>（Pixel 为主）</li>
-            <li><a href="https://e.foundation/" target="_blank">/e/OS（Murena）</a> - 商店: <a href="https://murena.com/" target="_blank">https://murena.com/</a></li>
+            <li><a href="https://grapheneos.org/" target="_blank" rel="noopener noreferrer">GrapheneOS</a>（Pixel 系列）</li>
+            <li><a href="https://calyxos.org/" target="_blank" rel="noopener noreferrer">CalyxOS</a>（Pixel 为主）</li>
+            <li><a href="https://e.foundation/" target="_blank" rel="noopener noreferrer">/e/OS（Murena）</a> - 商店: <a href="https://murena.com/" target="_blank" rel="noopener noreferrer">https://murena.com/</a></li>
         </ul>
 
         <h3>补充：通用系统镜像（GSI）</h3>
         <ul>
-            <li><a href="https://github.com/phhusson/treble_experimentations/wiki" target="_blank">phhusson GSI（Treble 实验）</a></li>
+            <li><a href="https://github.com/phhusson/treble_experimentations/wiki" target="_blank" rel="noopener noreferrer">phhusson GSI（Treble 实验）</a></li>
         </ul>
 
         <div class="note">
@@ -172,7 +172,7 @@
             <ul>
                 <li>刷机前核对精确机型代号和分区类型（A/B、动态分区）、Android 大版本一致性</li>
                 <li>先备份 EFS/Modem 分区（涉及IMEI/基带），解锁BL会清数据</li>
-                <li>机型适配进度与刷机教程可参考 <a href="https://forum.xda-developers.com/" target="_blank">XDA论坛</a></li>
+                <li>机型适配进度与刷机教程可参考 <a href="https://forum.xda-developers.com/" target="_blank" rel="noopener noreferrer">XDA论坛</a></li>
             </ul>
         </div>
         </div>
@@ -180,7 +180,6 @@
     
     <script src="../../main/js/theme-manager.js" defer></script>
     <script src="../../main/js/navbar-loader.js" defer></script>
-    <script src="../../main/js/navbar.js" defer></script>
     <script src="../../main/js/indexjs.js" defer></script>
     <script src="../../main/js/copy-code.js" defer></script>
 </body>
