--- a/download.html
+++ b/download.html
@@ -45,15 +45,11 @@
         </section>
     </main>
 
-    <footer class="main-footer">
-        <div class="container">
-            <p>&copy; 2025 Lzee. All rights reserved.</p>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
 
     <script src="main/js/theme-manager.js" defer></script>
     <script src="main/js/navbar-loader.js" defer></script>
-    <script src="main/js/navbar.js" defer></script>
+    <script src="main/js/footer-loader.js" defer></script>
     <script src="main/js/indexjs.js" defer></script>
     <script src="main/js/download.js"></script>
 </body>
