--- a/模板/教程模板.html
+++ b/模板/教程模板.html
@@ -66,10 +66,12 @@
         <p>【完成说明占位符】</p>
         </div>
     </main>
-
+    
+    <div id="../../footer-placeholder"></div>
+    
     <script src="../../main/js/theme-manager.js" defer></script>
     <script src="../../main/js/navbar-loader.js" defer></script>
-    <script src="../../main/js/navbar.js" defer></script>
+    <script src="../../main/js/footer-loader.js" defer></script>
     <script src="../../main/js/indexjs.js" defer></script>
     <script src="../../main/js/copy-code.js" defer></script>
 </body>
