--- a/download.html
+++ b/download.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lzee 下载中心</title>
     <link rel="icon" type="image/png" href="main/images/logo.png">
-    <link rel="stylesheet" href="main/css/base.css">
+    <link rel="stylesheet" href="main/css/styles.css">
     <link rel="stylesheet" href="main/css/navbar.css">
-    <link rel="stylesheet" href="main/css/hero.css">
-    <link rel="stylesheet" href="main/css/download.css">
-    <link rel="stylesheet" href="main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -18,7 +15,7 @@
     <div id="navbar-placeholder"></div>
 
     <main>
-        <section class="hero download-hero">
+        <section class="hero">
             <div class="container">
                 <div class="hero-content">
                     <h1 class="hero-headline">下载中心</h1>
@@ -45,12 +42,33 @@
         </section>
     </main>
 
-    <div id="footer-placeholder"></div>
+    <footer class="main-footer">
+        <div class="container">
+            <p>&copy; 2025 Lzee. All rights reserved.</p>
+        </div>
+    </footer>
 
-    <script src="main/js/theme-manager.js" defer></script>
-    <script src="main/js/navbar-loader.js" defer></script>
-    <script src="main/js/footer-loader.js" defer></script>
-    <script src="main/js/indexjs.js" defer></script>
+    <script src="main/js/navbar.js" defer></script>
+    <script>
+        fetch('main/components/navbar.html')
+            .then(response => {
+                if (!response.ok) {
+                    console.error('Fetch error:', response.statusText);
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('navbar-placeholder').innerHTML = html;
+                if (typeof initNavbar === 'function') {
+                    initNavbar();
+                }
+            })
+            .catch(error => {
+                console.error('Error loading navbar:', error);
+            });
+    </script>
+    <script src="main/js/utils.js" defer></script>
     <script src="main/js/download.js"></script>
 </body>
 </html>
