--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lzee的玩机教程</title>
     <link rel="icon" type="image/png" href="main/images/logo.png">
-    <link rel="stylesheet" href="main/css/base.css">
+    <link rel="stylesheet" href="main/css/styles.css">
     <link rel="stylesheet" href="main/css/navbar.css">
-    <link rel="stylesheet" href="main/css/hero.css">
-    <link rel="stylesheet" href="main/css/indexstyles.css">
-    <link rel="stylesheet" href="main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -79,7 +76,7 @@
                     </a>
 
                     <a href="tutorial/phone/remove-wifi-exclamation.html" target="_blank" rel="noopener noreferrer" class="feature-card">
-                        <h3>去除WIFI和信号的X或！感叹号</h3>
+                        <h3>去除WIFI和信号的X或感叹号</h3>
                         <p>解决安卓系统网络连通性检查导致的WIFI/信号感叹号问题。</p>
                     </a>
 
@@ -93,12 +90,34 @@
         </section>
     </main>
 
-    <div id="footer-placeholder"></div>
+    <footer class="main-footer">
+        <div class="container">
+            <p>&copy; 2025 Lzee. All rights reserved.</p>
+        </div>
+    </footer>
 
-    <script src="main/js/theme-manager.js" defer></script>
-    <script src="main/js/navbar-loader.js" defer></script>
-    <script src="main/js/footer-loader.js" defer></script>
-    <script src="main/js/indexjs.js" defer></script>
+    <script src="main/js/navbar.js" defer></script>
+    <script>
+        fetch('main/components/navbar.html')
+            .then(response => {
+                if (!response.ok) {
+                    console.error('Fetch error:', response.statusText);
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('navbar-placeholder').innerHTML = html;
+                // 执行 navbar.js 中的初始化函数
+                if (typeof initNavbar === 'function') {
+                    initNavbar();
+                }
+            })
+            .catch(error => {
+                console.error('Error loading navbar:', error);
+            });
+    </script>
+    <script src="main/js/utils.js" defer></script>
 </body>
 </html>
 
