--- a/tutorial/phone/GApps-Providers.html
+++ b/tutorial/phone/GApps-Providers.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>主流GApps提供商选择指南</title>
     <link rel="icon" type="image/png" href="../../main/images/logo.png">
-    <link rel="stylesheet" href="../../main/css/base.css">
+    <link rel="stylesheet" href="../../main/css/styles.css">
     <link rel="stylesheet" href="../../main/css/navbar.css">
-    <link rel="stylesheet" href="../../main/css/docs.css">
-    <link rel="stylesheet" href="../../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -24,9 +22,12 @@
         
         <p>GApps（Google Apps，谷歌框架）提供商致力于为各种自定义ROM（如LineageOS）提供不同版本和大小的谷歌应用包。选择合适的GApps包对于系统稳定性和功能完整性至关重要。</p>
 
+
+    
+        <h2>主要GApps提供商下载链接</h2>
         <!-- 下载链接区域 -->
         <div class="download-links">
-            <h2>主要GApps提供商下载链接</h2>
+
             <ul>
                 <li><strong>MindTheGapps：</strong><a href="https://mindthegapps.com/" target="_blank" rel="noopener noreferrer">官方网站</a></li>
                 <li><strong>NikGApps：</strong><a href="https://nikgapps.com/" target="_blank" rel="noopener noreferrer">官方网站</a></li>
@@ -179,9 +180,26 @@
         </div>
     </main>
 
-    <script src="../../main/js/theme-manager.js" defer></script>
-    <script src="../../main/js/navbar-loader.js" defer></script>
-    <script src="../../main/js/indexjs.js" defer></script>
-    <script src="../../main/js/copy-code.js" defer></script>
+    <script src="../../main/js/navbar.js" defer></script>
+    <script>
+        fetch('../../main/components/navbar.html')
+            .then(response => {
+                if (!response.ok) {
+                    console.error('Fetch error:', response.statusText);
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('navbar-placeholder').innerHTML = html;
+                if (typeof initNavbar === 'function') {
+                    initNavbar();
+                }
+            })
+            .catch(error => {
+                console.error('Error loading navbar:', error);
+            });
+    </script>
+    <script src="../../main/js/utils.js" defer></script>
 </body>
 </html>
