--- a/tutorial/phone/adb-sideload.html
+++ b/tutorial/phone/adb-sideload.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADB Sideload 使用教程</title>
     <link rel="icon" type="image/png" href="../../main/images/logo.png">
-    <link rel="stylesheet" href="../../main/css/base.css">
+    <link rel="stylesheet" href="../../main/css/styles.css">
     <link rel="stylesheet" href="../../main/css/navbar.css">
-    <link rel="stylesheet" href="../../main/css/docs.css">
-    <link rel="stylesheet" href="../../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -50,9 +48,10 @@
         </ul>
 
         <!-- 下载链接区域 -->
+
         <div class="download-links">
-            <h2>所需工具下载</h2>
             <ul>
+
                 <li><strong>ADB 工具包：</strong><a href="https://developer.android.com/tools/releases/platform-tools" target="_blank" rel="noopener noreferrer">点我下载</a></li>
                 <li><strong>手机 USB 驱动：</strong><a href="https://developer.android.com/studio/run/win-usb" target="_blank" rel="noopener noreferrer">点我下载</a></li>
             </ul>
@@ -116,11 +115,26 @@
         </div>
     </main>
 
-
-
-    <script src="../../main/js/theme-manager.js" defer></script>
-    <script src="../../main/js/navbar-loader.js" defer></script>
-    <script src="../../main/js/indexjs.js" defer></script>
-    <script src="../../main/js/copy-code.js" defer></script>
+    <script src="../../main/js/navbar.js" defer></script>
+    <script>
+        fetch('../../main/components/navbar.html')
+            .then(response => {
+                if (!response.ok) {
+                    console.error('Fetch error:', response.statusText);
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('navbar-placeholder').innerHTML = html;
+                if (typeof initNavbar === 'function') {
+                    initNavbar();
+                }
+            })
+            .catch(error => {
+                console.error('Error loading navbar:', error);
+            });
+    </script>
+    <script src="../../main/js/utils.js" defer></script>
 </body>
 </html>
