--- a/tutorial/phone/redmagic-disable-update.html
+++ b/tutorial/phone/redmagic-disable-update.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>红魔手机ADB方式关闭系统更新(免root)</title>
     <link rel="icon" type="image/png" href="../../main/images/logo.png">
-    <link rel="stylesheet" href="../../main/css/base.css">
+    <link rel="stylesheet" href="../../main/css/styles.css">
     <link rel="stylesheet" href="../../main/css/navbar.css">
-    <link rel="stylesheet" href="../../main/css/docs.css">
-    <link rel="stylesheet" href="../../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght极400;500;700&display=swap" rel="stylesheet">
@@ -32,11 +30,11 @@
             <p>在电脑上打开命令行工具，极入以下命令来禁用系统更新及相关组件。</p>
             
             <h4>禁用系统更新</h4>
-            <pre><code>adb shell pm disable-user com.zte.zdm</code></pre>
+            <div class="code-block">adb shell pm disable-user com.zte.zdm</div>
 
             <h4>禁用快应用和快应用引擎（可选）</h4>
-            <pre><code>adb shell pm disable-user cn.nubia.hybrid</code></pre>
-            <pre><code>adb shell pm disable-user cn.nubia.quickrt</code></pre>
+            <div class="code-block">adb shell pm disable-user cn.nubia.hybrid</div>
+            <div class="code-block">adb shell pm disable-user cn.nubia.quickrt</div>
         </section>
 
         <section>
@@ -51,7 +49,7 @@
 
             <h4>使用ADB命令启用</h4>
             <p>执行以下命令即可重新启用系统更新服务：</p>
-            <pre><code>adb shell pm enable com.z极.zdm</code></pre>
+            <div class="code-block">adb shell pm enable com.zte.zdm</div>
 
             <h4>手动安装更新包或在设置中打开</h4>
             <p>您可以下载系统更新的安装包手动安装：</p>
@@ -66,9 +64,27 @@
 
     </main>
 
-    <script src="../../main/js/theme-manager.js" defer></script>
-    <script src="../../main/js/navbar-loader.js" defer></script>
-    <script src="../../main/js/indexjs.js" defer></script>
-    <script src="../../main/js/copy-code.js" defer></script>
+    <script src="../../main/js/navbar.js" defer></script>
+    <script>
+        console.log('Attempting to fetch navbar from: ../../main/components/navbar.html');
+        fetch('../../main/components/navbar.html')
+            .then(response => {
+                if (!response.ok) {
+                    console.error('Fetch error:', response.statusText);
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('navbar-placeholder').innerHTML = html;
+                if (typeof initNavbar === 'function') {
+                    initNavbar();
+                }
+            })
+            .catch(error => {
+                console.error('Error loading navbar:', error);
+            });
+    </script>
+    <script src="../../main/js/utils.js" defer></script>
 </body>
 </html>
