--- a/模板/教程模板.html
+++ b/模板/教程模板.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>【标题占位符】</title>
     <link rel="icon" type="image/png" href="../../main/images/logo.png">
-    <link rel="stylesheet" href="../../main/css/base.css">
+    <link rel="stylesheet" href="../../main/css/styles.css">
     <link rel="stylesheet" href="../../main/css/navbar.css">
-    <link rel="stylesheet" href="../../main/css/docs.css">
-    <link rel="stylesheet" href="../../main/css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -67,12 +65,27 @@
         </div>
     </main>
     
-    <div id="../../footer-placeholder"></div>
+    <script src="../../main/js/navbar.js" defer></script>
+    <script>
+        fetch('../../main/components/navbar.html')
+            .then(response => {
+                if (!response.ok) {
+                    console.error('Fetch error:', response.statusText);
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('navbar-placeholder').innerHTML = html;
+                if (typeof initNavbar === 'function') {
+                    initNavbar();
+                }
+            })
+            .catch(error => {
+                console.error('Error loading navbar:', error);
+            });
+    </script>
     
-    <script src="../../main/js/theme-manager.js" defer></script>
-    <script src="../../main/js/navbar-loader.js" defer></script>
-    <script src="../../main/js/footer-loader.js" defer></script>
-    <script src="../../main/js/indexjs.js" defer></script>
-    <script src="../../main/js/copy-code.js" defer></script>
+    <script src="../../main/js/utils.js" defer></script>
 </body>
 </html>
