--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
                         <p>主流谷歌框架提供商对比与选择指南，适用于各种自定义ROM。</p>
                     </a>
 
+                    <a href="tutorial/Utilities/clash-software.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>Clash软件和机场大全</h3>
+                        <p>主流Clash客户端软件和机场介绍与下载指南。</p>
+                    </a>
+
+                    <a href="tutorial/Utilities/github-accelerator.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>GitHub加速下载</h3>
+                        <p>GitHub文件加速下载服务与使用方法。</p>
+                    </a>
+
                 </div>
             </div>
         </section>
