--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                         <h3>GitHub加速下载</h3>
                         <p>GitHub文件加速下载服务与使用方法。</p>
                     </a>
+                    <a href="tutorial/Utilities/chrome-extension-fix.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>Chrome扩展程序停用问题解决</h3>
+                        <p>解决Chrome 140/141版本中扩展程序被停用的问题。</p>
+                    </a>
                     <a href="tutorial/wintool/TrafficMonitor.html" target="_blank" rel="noopener noreferrer" class="feature-card">
                         <h3>TrafficMonitor</h3>
                         <p>适用于 Windows 的网速监控悬浮窗工具。</p>
