--- a/tutorial/Utilities/chrome-extension-fix.html
+++ b/tutorial/Utilities/chrome-extension-fix.html
@@ -61,7 +61,7 @@
             </div>
             
 
-            <h2>通过屏蔽 Chrome 检查更新域名</h2>
+            <h2>屏蔽浏览器更新：通过屏蔽 Chrome 检查更新域名</h2>
             
             <h3>第一步：编辑 hosts 文件</h3>
             <p>导航到 <code>C:\Windows\System32\drivers\etc\hosts</code></p>
