--- a/tutorial/Utilities/clash-software.html
+++ b/tutorial/Utilities/clash-software.html
@@ -34,10 +34,11 @@
             <h2>机场推荐</h2>
             <div class="download-links">
                 <ul>
-                    <li><strong>机场大全：</strong><a href="https://bucd.lol/#/register?code=Mh38MUoI" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：限时套餐最便宜，50G月付8</li>
+                    <li><strong>bucd：</strong><a href="https://bucd.lol/#/register?code=Mh38MUoI" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：限时套餐最便宜，50G月付8</li>
                     <li><strong>SharkCloud：</strong><a href="https://sharkcloud.app/register?code=aBLEeDUr" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：节点多，价格中等，70G月付10</li>
                     <li><strong>魔戒：</strong><a href="https://mojie.co/register?aff=71WZMcDQ" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：按量套餐最便宜，130G-不限时间-14.9</li>
                     <li><strong>龙猫：</strong><a href="https://inv05.lmaff01.cc/register?aff=lvVlGSso" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：速度不错，但价格贵，100G月付15</li>
+                    <li><strong>Alphalo：</strong><a href="https://user.alphalo.net/" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：限时套餐最便宜，100G月付8，进网站需要梯子</li>
                 </ul>
             </div>
             
