添加压缩工具
添加压缩工具

--- a/download.html
+++ b/download.html
@@ -33,6 +33,7 @@
                     <button class="filter-btn" data-category="system">系统镜像</button>
                     <button class="filter-btn" data-category="utility">实用工具</button>
                     <button class="filter-btn" data-category="driver">驱动工具</button>
+                    <button class="filter-btn" data-category="archive">压缩工具</button>
                 </div>
 
                 <div class="downloads-grid" id="downloads-grid">
