--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
                         <h3>3Dmigoto 解码教程</h3>
                         <p>Unity和虚幻引擎游戏去码工具使用指南。</p>
                     </a>
+                    <a href="tutorial/Utilities/Unity-BepinEx-Decoder.html" target="_blank" rel="noopener noreferrer" class="feature-card">
+                        <h3>Unity BepInEx 解码教程</h3>
+                        <p>Unity引擎游戏使用BepInEx框架进行解码的详细指南。</p>
+                    </a>
                 </div>
             </div>
         </section>
