--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@
                         <p>Unity引擎游戏使用BepInEx框架进行解码的详细指南。</p>
                         <span class="card-tag">游戏解码</span>
                     </a>
+                    <a href="tutorial/Utilities/local-ai-config.html" target="_blank" rel="noopener noreferrer" class="feature-card" data-category="software">
+                        <h3>本地大模型配置教程</h3>
+                        <p>Ollama和LM Studio本地大语言模型配置与使用指南。</p>
+                        <span class="card-tag">AI工具</span>
+                    </a>
+                    <a href="tutorial/Utilities/Unity-Game-Translation-Tutorial.html" target="_blank" rel="noopener noreferrer" class="feature-card" data-category="game">
+                        <h3>Unity游戏AI翻译教程</h3>
+                        <p>使用大模型自动翻译Unity游戏文本的详细配置指南。</p>
+                        <span class="card-tag">游戏翻译</span>
+                    </a>
+                    <a href="tutorial/wintool/usb-boot-keys.html" target="_blank" rel="noopener noreferrer" class="feature-card" data-category="system">
+                        <h3>U盘启动快捷键查询</h3>
+                        <p>各品牌电脑和主板U盘启动快捷键查询列表，方便系统重装。</p>
+                        <span class="card-tag">系统工具</span>
+                    </a>
                 </div>
             </div>
         </section>
