--- a/tutorial/Utilities/clash-software.html
+++ b/tutorial/Utilities/clash-software.html
@@ -39,6 +39,8 @@
                     <li><strong>魔戒：</strong><a href="https://mojie.co/register?aff=71WZMcDQ" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：按量套餐最便宜，130G-不限时间-14.9</li>
                     <li><strong>龙猫：</strong><a href="https://inv05.lmaff01.cc/register?aff=lvVlGSso" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：速度不错，但价格贵，100G月付15</li>
                     <li><strong>Alphalo：</strong><a href="https://user.alphalo.net/register?code=LFVlW8s9" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：限时套餐最便宜，100G月付8，进网站需要梯子</li>
+                    <li><strong>千速喵（TSMeow）：</strong><a href="https://tsmeog.top/#/register?code=Vyygq9Sv" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：速度不错，13.88/月 256G；68.80 不限时/512G</li>
+                    <li><strong>魔法喵（Magicat）：</strong><a href="https://magicat.click/register?code=vFAhh2yT" target="_blank" rel="noopener noreferrer">访问官网</a><br>优势：速度不错，9.9/月 768G；78 不限时/218G</li>
                 </ul>
             </div>
             
